--- a/app/src/main/res/layout/activity_main_map.xml
+++ b/app/src/main/res/layout/activity_main_map.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/settings"
-        android:text="Settings"/>
+        android:text="Dashboard"/>
 
     <LinearLayout
         android:layout_width="match_parent"
